fix database icons sizes

--- a/src/layouts/ChangeDB.astro
+++ b/src/layouts/ChangeDB.astro
@@ -23,12 +23,12 @@ import sqlserverIcon from "/public/sqlserver.svg";
     class="dropdown-content z-[1] menu p-2 shadow bg-slate-950 rounded-box w-52"
   >
     <div class="flex flex-wrap items-center justify-center content-center">
-      <DatabaseIcon size={12} href="/mariadb" src={mariadbIcon} />
-      <DatabaseIcon size={12} href="/mysql" src={mysqlIcon} />
-      <DatabaseIcon size={12} href="/oracle" src={oracleIcon} />
-      <DatabaseIcon size={12} href="/postgresql" src={pgIcon} />
-      <DatabaseIcon size={12} href="/sqlite" src={sqliteIcon} />
-      <DatabaseIcon size={12} href="/sqlserver" src={sqlserverIcon} />
+      <DatabaseIcon size="md" href="/mariadb" src={mariadbIcon} />
+      <DatabaseIcon size="md" href="/mysql" src={mysqlIcon} />
+      <DatabaseIcon size="md" href="/oracle" src={oracleIcon} />
+      <DatabaseIcon size="md" href="/postgresql" src={pgIcon} />
+      <DatabaseIcon size="md" href="/sqlite" src={sqliteIcon} />
+      <DatabaseIcon size="md" href="/sqlserver" src={sqlserverIcon} />
     </div>
   </ul>
 </div>
