--- a/src/pages/mariadb.astro
+++ b/src/pages/mariadb.astro
@@ -1,6 +1,6 @@
 ---
-import DMBS from "../layouts/DMBS.astro";
+import DBMS from "../layouts/DBMS.astro";
 import { dbNames } from "../utils/constants";
 ---
 
-<DMBS pageName={dbNames.MARIADB} />
+<DBMS pageName={dbNames.MARIADB} />
