--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import DatabaseIcon from "../layouts/DatabaseIcon.astro";
+import DatabaseIcon from "../layouts/ui/DatabaseIcon.astro";
 
 // icons
 import mariadbIcon from "/public/mariadb.svg";
