--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import sqliteIcon from "/public/sqlite.svg";
 import sqlserverIcon from "/public/sqlserver.svg";
 ---
 
-<Layout title="Astro">
+<Layout title="DBMS">
   <div class="h-screen flex flex-col justify-center">
     <h1 class="text-lg text-center mb-5 text-slate-500">
       Selecciona una base de datos
