--- a/src/pages/mariadb.astro
+++ b/src/pages/mariadb.astro
@@ -1,6 +1,10 @@
 ---
 import DBMS from "../layouts/DBMS.astro";
+import Layout from "../layouts/Layout.astro";
+
 import { dbNames } from "../utils/constants";
 ---
 
-<DBMS pageName={dbNames.MARIADB} />
+<Layout title="MariaDB">
+  <DBMS pageName={dbNames.MARIADB} />
+</Layout>
