--- a/src/pages/postgresql.astro
+++ b/src/pages/postgresql.astro
@@ -1,6 +1,10 @@
 ---
 import DBMS from "../layouts/DBMS.astro";
+import Layout from "../layouts/Layout.astro";
+
 import { dbNames } from "../utils/constants";
 ---
 
-<DBMS pageName={dbNames.POSTGRESQL} />
+<Layout title="PostgreSQL">
+  <DBMS pageName={dbNames.POSTGRESQL} />
+</Layout>
