--- a/src/pages/sqlserver.astro
+++ b/src/pages/sqlserver.astro
@@ -1,6 +1,10 @@
 ---
 import DBMS from "../layouts/DBMS.astro";
+import Layout from "../layouts/Layout.astro";
+
 import { dbNames } from "../utils/constants";
 ---
 
-<DBMS pageName={dbNames.SQLSERVER} />
+<Layout title="SQL Server">
+  <DBMS pageName={dbNames.SQLSERVER} />
+</Layout>
