--- a/src/layouts/DBMS.astro
+++ b/src/layouts/DBMS.astro
@@ -6,13 +6,9 @@ import Section from "./components/Section.astro";
 import ChangeDB from "./ui/ChangeDB.astro";
 
 const { pageName } = Astro.props;
-
-import fetchData from "../services/fetchData";
-const tableNamesURL = `http://localhost:4321/api/${pageName}/tables/names.json`;
-const tableNames = await fetchData(tableNamesURL);
 ---
 
 <main class="grid grid-cols-12 min-h-svh">
-  <Aside />
+  <Aside pageName={pageName} />
   <Section />
 </main>
