Update import path for Aside component

--- a/src/layouts/DBMS.astro
+++ b/src/layouts/DBMS.astro
@@ -1,9 +1,8 @@
 ---
 import "../pages/_index.css";
 
-import Aside from "./components/Aside.astro";
+import Aside from "./components/Aside/Index.astro";
 import Section from "./components/Section.astro";
-import ChangeDB from "./ui/ChangeDB.astro";
 
 const { pageName } = Astro.props;
 ---
