modificando el contenedor

--- a/src/layouts/components/Section.astro
+++ b/src/layouts/components/Section.astro
@@ -2,4 +2,7 @@
 // const {  } = Astro.props;
 ---
 
-<section class="col-span-9 bg-slate-600">Content</section>
+<div class="mockup-browser border bg-base-200 left-5" style="width: 500px; height: 500px;">
+    <div class="absolute top-0 left-0 p-2 bg-base-200  text-2xl">Table Details</div>
+    
+</div>
