--- a/src/layouts/components/Aside/Index.astro
+++ b/src/layouts/components/Aside/Index.astro
@@ -15,7 +15,7 @@ import Roles from "./Roles.astro";
 ---
 
 <aside
-  class="col-span-3 bg-slate-700 p-4 max-h-svh overflow-y-scroll scrollbar scrollbar-thumb-slate-800 scrollbar-track-slate-700 border-e-[1px] border-slate-500"
+  class="col-span-3 bg-slate-700 p-4 max-h-svh overflow-y-scroll scrollbar scrollbar-thumb-slate-800 scrollbar-track-slate-700 border-e border-slate-500"
 >
   <header>
     <div class="flex items-center justify-between mb-5">
