--- a/src/layouts/components/Section.astro
+++ b/src/layouts/components/Section.astro
@@ -57,10 +57,10 @@ import generateIcon from "/public/file.svg";
       ></textarea>
     </div>
   </div>
-  <div class="bg-inherit border-t border-slate-700 h-1/2">
+  <div class="bg-inherit bg-slate-500 h-full">
     <!-- Resultados consulta -->
     <header class="bg-slate-700 rounded-md px-3 py-2 font-semibold text-md m-3">
-      Resultado consulta <button class="btn btn-xs btn-error ms-2">
+      Resultado consulta <button class="btn btn-xs btn-accent ms-2">
         <Image src={generateIcon} alt="generate PDF" class="w-3" />
         Generar reporte
       </button>
