Add creat rol modal

--- a/src/layouts/components/Select.astro
+++ b/src/layouts/components/Select.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
   label: string;
-  value: string;
+  value?: string;
   defaultSelected: string;
   options: string[] | null;
 }
