--- a/src/layouts/components/Aside/Index.astro
+++ b/src/layouts/components/Aside/Index.astro
@@ -5,6 +5,11 @@ interface Props {
 
 const { pageName } = Astro.props;
 
+import Modal from "../Modal.astro";
+import Input from "../Input.astro";
+import Select from "../Select.astro";
+import Check from "../Check.astro";
+
 import { Image } from "astro:assets";
 import ChangeDB from "../../ui/ChangeDB.astro";
 import databaseIcon from "/public/database.svg";
@@ -33,8 +38,12 @@ import Roles from "./Roles.astro";
   <div class="divider"></div>
   <footer>
     <div class="grid grid-cols-2 my-5 gap-2">
-      <button class="btn btn-sm btn-primary">Crear usuario</button>
-      <button class="btn btn-sm btn-primary">Crear rol</button>
+      <button class="btn btn-sm btn-primary" onclick="add_user.showModal()">
+        Crear usuario
+      </button>
+      <button class="btn btn-sm btn-primary" onclick="add_role.showModal()">
+        Crear rol
+      </button>
       <button class="btn btn-sm btn-primary col-span-2">
         Generar CRUD para las entidades
       </button>
@@ -48,3 +57,14 @@ import Roles from "./Roles.astro";
     <ChangeDB />
   </footer>
 </aside>
+
+<Modal id="add_user" type="Crear" title="Crear usuario">
+  <Input type="text" label="Nombre" example="christiam" />
+  <Input type="password" label="Contraseña" example="P@ssw0rd" />
+  <Select label="Rol" defaultSelected="un rol" options={[]} />
+</Modal>
+
+<Modal id="add_role" type="Crear" title="Crear rol">
+  <Input type="text" label="Nombre" example="admin" />
+  <Check label="Permisos" options={["sysdba", "sysoper", "read only"]} />
+</Modal>
