--- a/src/layouts/components/Input.astro
+++ b/src/layouts/components/Input.astro
@@ -4,7 +4,7 @@ import { HTMLAttributes } from "astro/types";
 interface Props {
   label: string;
   example: string;
-  value: string;
+  value?: string;
   type: HTMLAttributes<"input">["type"];
 }
 
