--- a/src/layouts/components/Aside/Users.astro
+++ b/src/layouts/components/Aside/Users.astro
@@ -6,8 +6,8 @@ interface Props {
 const { pageName } = Astro.props;
 
 import Modal from "../Modal.astro";
-import Input from "../Input.astro";
-import Select from "../Select.astro";
+import Input from "../Forms/Input.astro";
+import Select from "../Forms/Select.astro";
 
 import { Image } from "astro:assets";
 import editIcon from "/public/pencil.svg";
