--- a/src/layouts/components/Aside/Users.astro
+++ b/src/layouts/components/Aside/Users.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { pageName } = Astro.props;
 
-import Modal from "../Modal.astro";
+import Modal from "../Modals/BaseModal.astro";
 import Input from "../Forms/Input.astro";
 import Select from "../Forms/Select.astro";
 
