--- a/src/layouts/components/Section.astro
+++ b/src/layouts/components/Section.astro
@@ -1,52 +1,12 @@
 ---
-import { Image } from "astro:assets";
-
-import playIcon from "/public/play.svg";
-
 // const {  } = Astro.props;
 ---
 
 <div class="col-span-9 bg-slate-800 flex flex-col">
-  <div class="flex min-h-[282px] max-h-1/2">
-    <div class="bg-inherit m-3 flex flex-col gap-2 w-1/2">
-      <header class="bg-slate-700 rounded-md px-3 py-2 font-semibold text-md">
-        nombre_tabla <span class="badge badge-success badge-sm font-bold">
-          detalles
-        </span>
-      </header>
-      <main class="overflow-y-auto bg-slate-700 rounded-md">
-        <table class="table table-sm">
-          <thead>
-            <tr>
-              <th>nombre del atributo</th>
-              <th>tipo de dato</th>
-              <th>es opcional</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>id_tabla</td>
-              <td>serial</td>
-              <td>no</td>
-            </tr>
-            <tr>
-              <td>nombre_tabla</td>
-              <td>varchar</td>
-              <td>no</td>
-            </tr>
-            <tr>
-              <td>apellido_tabla</td>
-              <td>varchar</td>
-              <td>no</td>
-            </tr>
-          </tbody>
-        </table>
-      </main>
-    </div>
-    <div class="bg-inherit m-3 flex flex-col gap-2 w-1/2">
+  <div class="flex h-1/3">
+    <div class="bg-inherit m-3 flex flex-col w-full gap-2">
       <header class="bg-slate-700 rounded-md px-3 py-2 font-semibold text-md">
         Consultas SQL <button class="btn btn-xs btn-secondary ms-2">
-          <Image src={playIcon} alt="play" class="w-3" />
           Ejecutar
         </button>
       </header>
@@ -56,7 +16,7 @@ import playIcon from "/public/play.svg";
       ></textarea>
     </div>
   </div>
-  <div class="bg-inherit bg-slate-500 h-full">
+  <div class="bg-inherit bg-slate-500 h-2/3">
     <!-- Resultados consulta -->
     <header class="bg-slate-700 rounded-md px-3 py-2 font-semibold text-md m-3">
       Resultado consulta <button class="btn btn-xs btn-accent ms-2">
