Update layout styles for DBMS page

--- a/src/layouts/components/Aside/Index.astro
+++ b/src/layouts/components/Aside/Index.astro
@@ -23,7 +23,7 @@ import Roles from "./Roles.astro";
 ---
 
 <aside
-  class="col-span-3 bg-slate-700 p-4 max-h-svh overflow-y-scroll scrollbar scrollbar-thumb-slate-800 scrollbar-track-slate-700"
+  class="min-w-[325px] bg-slate-700 p-4 max-h-svh overflow-y-scroll scrollbar scrollbar-thumb-slate-800 scrollbar-track-slate-700"
 >
   <header>
     <div class="flex items-center justify-between mb-5">
