--- a/src/layouts/DBMS.astro
+++ b/src/layouts/DBMS.astro
@@ -7,7 +7,7 @@ import Section from "./components/Section.astro";
 const { pageName } = Astro.props;
 ---
 
-<main class="grid grid-cols-12 min-h-svh">
+<main class="flex min-h-svh">
   <Aside pageName={pageName} />
   <Section />
 </main>
