--- a/src/layouts/components/Section.astro
+++ b/src/layouts/components/Section.astro
@@ -2,7 +2,7 @@
 // const {  } = Astro.props;
 ---
 
-<div class="col-span-9 bg-slate-800 flex flex-col">
+<div class="w-full bg-slate-800 flex flex-col">
   <div class="flex h-1/3">
     <div class="bg-inherit m-3 flex flex-col w-full gap-2">
       <header class="bg-slate-700 rounded-md px-3 py-2 font-semibold text-md">
