--- a/src/layouts/components/Aside/Users.astro
+++ b/src/layouts/components/Aside/Users.astro
@@ -28,10 +28,7 @@ const options = [
 ---
 
 <!-- [{ usename, usesysid, usecreatedb, usesuper, passwd }] -->
-<div
-  tabindex="2"
-  class="collapse collapse-open collapse-arrow bg-slate-800 rounded-md"
->
+<div tabindex="2" class="collapse collapse-arrow bg-slate-800 rounded-md">
   <input type="checkbox" class="peer" />
   <div class="collapse-title font-medium">Usuarios</div>
   <div class="collapse-content flex flex-col gap-1">
