Update import paths in Aside and improve UI in TableDetails modal

--- a/src/layouts/components/Aside/Tables.astro
+++ b/src/layouts/components/Aside/Tables.astro
@@ -12,10 +12,7 @@ const tableNamesURL = `http://localhost:4321/api/${pageName}/tables/names.json`;
 const tableNames = await fetchData(tableNamesURL);
 ---
 
-<div
-  tabindex="1"
-  class="collapse collapse-open collapse-arrow bg-slate-800 rounded-md"
->
+<div tabindex="1" class="collapse collapse-arrow bg-slate-800 rounded-md">
   <input type="checkbox" class="peer" />
   <div class="collapse-title font-medium">Entidades</div>
   <div class="collapse-content flex flex-col gap-1">
