--- a/src/layouts/components/Modals/BaseModal.astro
+++ b/src/layouts/components/Modals/BaseModal.astro
@@ -3,9 +3,10 @@ interface Props {
   id: string;
   type: string;
   title: string;
+  onSubmit?: () => void;
 }
 
-const { id, type, title } = Astro.props as Props;
+const { id, type, title, onSubmit } = Astro.props;
 ---
 
 <dialog id={id} class="modal modal-bottom sm:modal-middle">
@@ -19,7 +20,11 @@ const { id, type, title } = Astro.props as Props;
       >
         ✕ <!-- Close icon -->
       </button>
-      <form method="dialog" class="flex flex-col gap-3 w-full">
+      <form
+        method="dialog"
+        id={`Form-${id}`}
+        class="flex flex-col gap-3 w-full"
+      >
         <!-- Form fields -->
         <slot />
         <!-- Form actions -->
@@ -27,9 +32,31 @@ const { id, type, title } = Astro.props as Props;
           <button type="button" onclick=`${id}.close()` class="btn btn-outline">
             Cancelar
           </button>
-          <button type="submit" class="btn btn-accent">{type}</button>
+          <button type="submit" class="btn btn-accent">
+            {type}
+          </button>
         </div>
       </form>
     </div>
   </div>
 </dialog>
+
+<script is:inline define:vars={{ id, onSubmit }}>
+  const dialog = window.document.getElementById(id);
+  const form = window.document.getElementById(`Form-${id}`);
+
+  if (!dialog) throw new Error(`Dialog is not found`);
+  if (!form) throw new Error(`Form is not found`);
+
+  form.addEventListener("submit", handleSubmit);
+
+  function handleSubmit(event) {
+    event.preventDefault();
+    console.log("Form submitted");
+
+    // Call the passed function
+    if (onSubmit) () => onSubmit();
+
+    dialog.close();
+  }
+</script>
