--- a/src/layouts/components/Forms/Input.astro
+++ b/src/layouts/components/Forms/Input.astro
@@ -1,14 +1,15 @@
 ---
-import { HTMLAttributes } from "astro/types";
+import { type HTMLAttributes } from "astro/types";
 
 interface Props {
+  name: string;
   label: string;
   example: string;
   value?: string;
   type: HTMLAttributes<"input">["type"];
 }
 
-const { label, example, value, type } = Astro.props as Props;
+const { name, label, example, value, type }: Props = Astro.props;
 ---
 
 <label class="form-control">
@@ -18,6 +19,7 @@ const { label, example, value, type } = Astro.props as Props;
   <input
     required
     type={type}
+    name={name}
     value={value}
     class="input input-bordered w-full focus:outline-none"
   />
